commit novembre 2019